cloud/v2/kube-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaffold
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: scaffold
    version: v1.0.0
